// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppHeader > should accept custom classes 1`] = `
"<a href="/" class="w-full flex items-center px-4 sm:px-10 py-2 gap-2 custom-class"><img width="32" height="32" data-nuxt-img="" srcset="/_ipx/s_32x32/images/mascot.webp 1x, /_ipx/s_64x64/images/mascot.webp 2x" alt="" class="size-8" src="/_ipx/s_32x32/images/mascot.webp">
  <h1 class="text-xl font-bold">DartBuddy</h1>
</a>"
`;

exports[`AppHeader > should render correctly with default props 1`] = `
"<a href="/" class="w-full flex items-center px-4 sm:px-10 py-2 gap-2"><img width="32" height="32" data-nuxt-img="" srcset="/_ipx/s_32x32/images/mascot.webp 1x, /_ipx/s_64x64/images/mascot.webp 2x" alt="" class="size-8" src="/_ipx/s_32x32/images/mascot.webp">
  <h1 class="text-xl font-bold">DartBuddy</h1>
</a>"
`;
